Create books page

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    overflow-y: scroll;
+}
 
+   /* Custom Scrollbar */
+@layer components {
+    ::-webkit-scrollbar {
+      width: 8px; 
+    }
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1; 
+      border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #4C8073; 
+      border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #396056; 
+    }
+  }
